changed backend to be user session specific